
	* change all backend functions to accept a rapi_context as
	  first parameter, instead of using current_context, which
	  is obtained by the calling wrapper functions anyway
	* restructure source tree for rapi2 api; currently the
	  source refers to differences in over-the-wire calls to
	  WM5 and pre-WM5 devices as rapi1 and rapi2, these now
	  become backend_ops_{1,2}

2009-07-16  Mark Ellis  <mark@mpellis.org.uk>

	* 0.14 release

2009-07-12  Mark Ellis  <mark@mpellis.org.uk>

	* implement streaming CeRapiInvoke for rapi2
	* move non RAPI API functions that are identical for all
	  WM versions out of the indirection mechanism, ie. 
	  CeCopyFileA, CeRapiInvokeA, and the IRAPIStream functions
	* deprecate CeFileCopyA() and CeRapiInvokeA() in favour of
	  rapi_copy() and rapi_invoke(), to avoid confusion with
	  "real" RAPI API

2009-07-10  Mark Ellis  <mark@mpellis.org.uk>

	* implement CeRapiInvoke for rapi2 using buffers, based on
	  patch from David Richardson, many thanks !

2009-06-25  Mark Ellis  <mark@mpellis.org.uk>

	* fixes to CeRapiInvoke tests

2009-06-08  Mark Ellis  <mark@mpellis.org.uk>

	* create bootstrap script that doesn't run configure,
	  autogen.sh call bootstrap then configure
	* add configure options for odccm and synce-hal support,
	  and required dbus build structure
	* move rapi socket connection for odccm and hal from
	  libsynce to rapi_context, add rapi_context_disconnect()

2009-04-20  Mark Ellis  <mark@mpellis.org.uk>

	* catch uninitialized RapiContext in function calls
	* tidy up headers and shared constants, remove unused
	  rapi_types.h
	* implement reference counting on RapiContext

2009-04-11  Mark Ellis  <mark@mpellis.org.uk>

	* if RapiContext is auto-generated, keep it's SynceInfo
	  for later reference

2009-04-09  Mark Ellis  <mark@mpellis.org.uk>

	* use synce_info_get_ functions to obtain SynceInfo parameters;
	  new rapi_connection_get_ functions to give access to SynceInfo